Added JWT + RBAC Authorization + Registration
